[package]
name = "flash"
version = "0.2.13"
edition = "2024"
authors = ["HJfod", "matcool"]
description = "Documentation generator for C++"
readme = "README.md"
repository = "https://github.com/HJfod/flash"
license-file = "LICENSE"
keywords = ["documentation"]

[dependencies]
flash-macros = { path = "macros" }

clang = { version = "2.0.0", features = ["clang_10_0"] }
clap = { version = "4.5.23", features = ["derive"] }
glob = "0.3.2"
indicatif = "0.17.9"
serde = { version = "1.0.217", features = ["derive", "rc"] }
serde_json = "1.0.134"
shlex = "1.3.0"
strfmt = "0.2.4"
toml = "0.8.19"
tokio = { version = "1.42.0", features = ["full"] }
futures = "0.3.31"
percent-encoding = "2.3.1"
multipeek = "0.1.2"
pulldown-cmark = "0.12.2"
emojis = "0.6.4"
cached = "0.54.0"
serde_yaml = "0.9.34+deprecated"
anyhow = "1.0.95"
minify-html = "0.15.0"
lightningcss = "1.0.0-alpha.61"
ico = "0.3.0"
ahash = "0.8.11"
